Bug 1163452 - Only register stderr if it differs from stdout. r=glandium

Under certain Windows shells, the handle for stderr may be the same as
the handle for stdout.  Avoid crashing in this case.

Differential Revision: https://phabricator.services.mozilla.com/D150517