xpcom/build/PoisonIOInterposerWin.cpp
@@ -465,7 +465,9 @@ void InitPoisonIOInterposer() {
 
   // Stdout and Stderr are OK.
   MozillaRegisterDebugFD(1);
-  MozillaRegisterDebugFD(2);
+  if (::GetStdHandle(STD_OUTPUT_HANDLE) != ::GetStdHandle(STD_ERROR_HANDLE)) {
+    MozillaRegisterDebugFD(2);
+  }
 
 #ifdef MOZ_REPLACE_MALLOC
   // The contract with InitDebugFd is that the given registry can be used
